syntax = "proto3";

package state;

option go_package = ".;models";

message State {
	int64 dist = 1;
	int64 inv = 2;
	string p = 3;
	
}

message NeighborHeartBeat {
 	string id = 1;
	int64 sent_at = 2;
}

message NeighborUpdate {
	string id = 1;
	State state = 2;
}

enum MessageType {
	Invalid = 0;
	Heartbeat = 1;
	StateUpdate = 2;
}

message BroadcastMessage {
	MessageType type = 1;
	string src = 2;
	oneof msg {
		NeighborHeartBeat hb = 3;
		NeighborUpdate upd = 4;
	}
}